src/objects/Risk_Mitigation_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Cost__c</fullName>
        <inlineHelpText>Annual cost of this mitigation that is attributed to this risk</inlineHelpText>
        <label>Annual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effectiveness__c</fullName>
        <inlineHelpText>Select option that best describes the effectiveness of the given Mitigation actions on the given Risk.</inlineHelpText>
        <label>Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <inlineHelpText>Initial cost of this mitigation that is attributed to this risk</inlineHelpText>
        <label>Initial Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mitigation__c</fullName>
        <label>Mitigation</label>
        <referenceTo>Mitigation__c</referenceTo>
        <relationshipLabel>Risk Mitigation Relationships</relationshipLabel>
        <relationshipName>Risk_Mitigation_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>MLN_Risk__c</referenceTo>
        <relationshipLabel>Risk Mitigation Relationships</relationshipLabel>
        <relationshipName>Risk_Mitigation_Relationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Risk Mitigation Relationship</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Mitigation Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>